WebCore/dom/Element.h
@@ -326,7 +326,7 @@ public:
     void webkitRequestFullScreen(unsigned short flags);
 #endif
 
-    bool isSpellCheckingEnabled() const;
+    virtual bool isSpellCheckingEnabled() const;
 
 protected:
     Element(const QualifiedName& tagName, Document* document, ConstructionType type)
