WebCore/editing/Editor.cpp
@@ -2095,7 +2095,7 @@ void Editor::markMisspellingsOrBadGrammar(const VisibleSelection& selection, boo
     if (!editableNode || !editableNode->isContentEditable())
         return;
 
-    if (!isSpellCheckingEnabledInFocusedNode())
+    if (!isSpellCheckingEnabledFor(editableNode))
         return;
 
     // Get the spell checker if it is available
@@ -2115,17 +2115,19 @@ void Editor::markMisspellingsOrBadGrammar(const VisibleSelection& selection, boo
     }    
 }
 
-bool Editor::isSpellCheckingEnabledInFocusedNode() const
+bool Editor::isSpellCheckingEnabledFor(Node* node) const
 {
-    // Ascend the DOM tree to find a "spellcheck" attribute.
-    // When we find a "spellcheck" attribute, retrieve its value and return false if its value is "false".
-    const Node* node = frame()->document()->focusedNode();
     if (!node)
         return false;
     const Element* focusedElement = node->isElementNode() ? toElement(node) : node->parentElement();
     if (!focusedElement)
         return false;
     return focusedElement->isSpellCheckingEnabled();
+}
+
+bool Editor::isSpellCheckingEnabledInFocusedNode() const
+{
+    return isSpellCheckingEnabledFor(m_frame->selection()->start().node());
 }
 
 void Editor::markMisspellings(const VisibleSelection& selection, RefPtr<Range>& firstMisspellingRange)
@@ -2170,7 +2172,7 @@ void Editor::markAllMisspellingsAndBadGrammarInRanges(TextCheckingOptions textCh
     if (!editableNode || !editableNode->isContentEditable())
         return;
 
-    if (!isSpellCheckingEnabledInFocusedNode())
+    if (!isSpellCheckingEnabledFor(editableNode))
         return;
 
     // Expand the range to encompass entire paragraphs, since text checking needs that much context.
