WebCore/rendering/TextControlInnerElements.h
@@ -49,6 +49,7 @@ private:
     virtual bool isMouseFocusable() const { return false; } 
     virtual bool isShadowNode() const { return m_shadowParent; }
     virtual ContainerNode* shadowParentNode() { return m_shadowParent; }
+    virtual bool isSpellCheckingEnabled() const;
     void setShadowParentNode(HTMLElement* shadowParent) { m_shadowParent = shadowParent; }
 
     HTMLElement* m_shadowParent;
